examples/test/testpolicy16933.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16933
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key5: value25
      key8: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value3
          key26: value14
          key24: value45
      podSelector:
        matchLabels:
          key45: value17
